--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,25 @@
   font-style: italic;
 }
 
-.content {
-  padding-top: 30px;
+.error,
+.success {
+  text-align: center;
+}
+
+.error {
+  border: 1px solid red;
+  background-color: #f99;
+  color: red;
+}
+
+.error ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.success {
+  border: 1px solid green;
+  background-color: #9f9;
+  color: green;
 }
