--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,16 @@ body {
   margin-right: 10px;
 }
 
+.big-avatar {
+  inline: block;
+  max-height: 500px;
+  width: auto;
+}
+
+header {
+  margin-bottom: 20px;
+}
+
 .new-post {
   padding: 16px 0;
 }
@@ -19,6 +29,10 @@ body {
 .new-post header,
 .posts header {
   margin-bottom: 20px;
+}
+
+video source[src=""], .post-image[src=""] {
+  display: none;
 }
 
 .posts .post {
@@ -58,4 +72,24 @@ body {
   border: 1px solid green;
   background-color: #9f9;
   color: green;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
