--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,11 @@ body {
   padding-top: 70px;
 }
 
+
+.content {
+  max-width: 100vw;
+}
+
 .avatar, .avatar-thumbnail {
   height: 24px;
   width: auto;
@@ -55,6 +60,10 @@ header {
 
 .post-text {
   padding: 2px;
+}
+
+.interactions {
+  margin-bottom: 20px;
 }
 
 .error,
